--- a/index.html
+++ b/index.html
@@ -1,13 +1,66 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Apple Clone</title>
-    <link src="styles.css" rel=stylesheet>
+    <link src="styles.css" rel="stylesheet">
     <meta charset="utf-8">
   </head>
+
   <body>
     <main>
-      
+      <div>
+        <nav>
+          <ul>
+            <li><img src="" alt=""></li>
+            <li>Store</li>
+            <li>Mac</li>
+            <li>iPod</li>
+            <li>iPhone</li>
+            <li>iPad</li>
+            <li>iTunes</li>
+            <li>Support</li>
+          </ul>
+          <div>
+            <input name="search" type="text">
+          </div>
+        </nav>
+        <div>
+            <h2>What will your verse be?</h2>
+            <p>Everyone has something to share. See how people are using
+                iPad in their unique ways to add to the world's story.
+            </p>
+            <p>Watch the "Your Verse" film and explore the stories
+                <span><img src="" alt="video play button"></span>
+            </p>
+        </div>
+      </div>
+      <div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <footer>
+        <div>
+            <p>Shop the Apple Online Store (1-800-MY-APPLE), visit an Apple Retail 
+                Store, or find a reseller.</p>
+            <p>Copyright © 2014 Apple Inc. All rights reserved. Terms of Use
+                <span>Privacy Policy</span>
+            </p>
+        </div>
+        <div>
+            <ul>
+                <li>Site Map</li>
+                <li>Hot News</li>
+                <li>RSS Feeds</li>
+                <li>Media Info</li>
+                <li>Environment</li>
+                <li>Job Opportunities</li>
+                <li>Contact Us</li>
+                <li><img src="" alt="American flag"></li>
+            </ul>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
