Began styling navbar - 20% complete

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <title>Apple Clone</title>
-    <link src="styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <meta charset="utf-8">
   </head>
 
   <body>
     <main>
-      <div>
-        <nav>
-          <ul>
-            <li><img src="" alt=""></li>
+      <div class="container">
+        <nav class="c-nav">
+          <ul class="nav-list">
+            <li class="apple"></li>
             <li>Store</li>
             <li>Mac</li>
             <li>iPod</li>
@@ -20,7 +20,7 @@
             <li>iTunes</li>
             <li>Support</li>
           </ul>
-          <div>
+          <div class="search-bar">
             <input name="search" type="text">
           </div>
         </nav>
