--- a/index.html
+++ b/index.html
@@ -19,17 +19,15 @@
             <li>iPad</li>
             <li>iTunes</li>
             <li>Support</li>
+            <li><input name="search" type="text"></li>
           </ul>
-          <div class="search-bar">
-            <input name="search" type="text">
-          </div>
         </nav>
-        <div>
+        <div class="main-txt">
             <h2>What will your verse be?</h2>
-            <p>Everyone has something to share. See how people are using
+            <p>Everyone has something to share. See how people are using<br>
                 iPad in their unique ways to add to the world's story.
             </p>
-            <p>Watch the "Your Verse" film and explore the stories
+            <p style="padding-bottom: 280px;">Watch the "Your Verse" film and explore the stories
                 <span><img src="" alt="video play button"></span>
             </p>
         </div>
