--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Everyone has something to share. See how people are using<br>
                 iPad in their unique ways to add to the world's story.
             </p>
-            <p style="padding-bottom: 280px;">Watch the "Your Verse" film and explore the stories
+            <p class="sctn-sep">Watch the "Your Verse" film and explore the stories
                 <span><img src="" alt="video play button"></span>
             </p>
         </div>
