Added apple logo to navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <nav class="c-nav">
           <ul class="nav-list">
-            <li></li>
+            <li><img class="nav-img" src="Images/apple-logo.png" alt="apple logo"></li>
             <li>Store</li>
             <li>Mac</li>
             <li>iPod</li>
