--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li>iPad</li>
             <li>iTunes</li>
             <li>Support</li>
-            <li><input name="search" type="text"></li>
+            <li style="width: 18%;"><input class="search-bar" name="search" type="text"></li>
           </ul>
         </nav>
         <div class="main-txt">
