--- a/index.html
+++ b/index.html
@@ -32,21 +32,27 @@
             </p>
         </div>
       </div>
-      <div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+      <div class="link-container">
+        <div class="iphone link">
+          <img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5s.jpg" alt="iphone 5S link">
+        </div>
+        <div class="iphone link">
+          <img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5c.jpg" alt="iphone 5C link">
+        </div>
+        <div class="iphone link">
+          <img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_30_years.jpg" alt="30th anniversary link">
+        </div>
+        <div class="iphone link">
+          <img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_supplier_responsibility.jpg" alt="supplier responsibility">
+        </div>
       </div>
       <footer>
-        <div>
+        <div class="ftr-1">
             <p>Shop the Apple Online Store (1-800-MY-APPLE), visit an Apple Retail 
                 Store, or find a reseller.</p>
-            <p>Copyright © 2014 Apple Inc. All rights reserved. Terms of Use
-                <span>Privacy Policy</span>
             </p>
         </div>
-        <div>
+        <div class="ftr-2">
             <ul>
                 <li>Site Map</li>
                 <li>Hot News</li>
@@ -57,6 +63,10 @@
                 <li>Contact Us</li>
                 <li><img src="" alt="American flag"></li>
             </ul>
+        </div>
+        <div class="ftr-3">
+          <p>Copyright © 2014 Apple Inc. All rights reserved. Terms of Use
+            <span>Privacy Policy</span>
         </div>
       </footer>
     </main>
