Formatted footer area

--- a/index.html
+++ b/index.html
@@ -47,26 +47,26 @@
         </div>
       </div>
       <footer>
-        <div class="ftr-1">
-            <p>Shop the Apple Online Store (1-800-MY-APPLE), visit an Apple Retail 
+        <div class="ftr">
+            <p>Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail</a> 
                 Store, or find a reseller.</p>
             </p>
         </div>
-        <div class="ftr-2">
+        <div class="ftr-1">
             <ul>
-                <li>Site Map</li>
-                <li>Hot News</li>
-                <li>RSS Feeds</li>
-                <li>Media Info</li>
-                <li>Environment</li>
-                <li>Job Opportunities</li>
-                <li>Contact Us</li>
-                <li><img src="" alt="American flag"></li>
+                <li><a href="#">Site Map</a></li>
+                <li><a href="#">Hot News</a></li>
+                <li><a href="#">RSS Feeds</a></li>
+                <li><a href="#">Media Info</a></li>
+                <li><a href="#">Environment</a></li>
+                <li><a href="#">Job Opportunities</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li class="ftr-flag"><a href="#"><img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/global/elements/flags/16x16/usa.png" alt="American flag"></a></li>
             </ul>
         </div>
-        <div class="ftr-3">
-          <p>Copyright © 2014 Apple Inc. All rights reserved. Terms of Use
-            <span>Privacy Policy</span>
+        <div class="ftr-2">
+          <p>Copyright © 2014 Apple Inc. All rights reserved. <a href="#" style="padding-right: 0.4%;">Terms of Use</a>
+            <span><a href="#">Privacy Policy</a></span>
         </div>
       </footer>
     </main>
