sized flag in footer list

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
         </div>
         <div class="ftr-1">
             <ul>
-                <li><a href="#">Site Map</a></li>
-                <li><a href="#">Hot News</a></li>
-                <li><a href="#">RSS Feeds</a></li>
-                <li><a href="#">Media Info</a></li>
-                <li><a href="#">Environment</a></li>
-                <li><a href="#">Job Opportunities</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li class="ftr-flag"><a href="#"><img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/global/elements/flags/16x16/usa.png" alt="American flag"></a></li>
+                <li class="list-border"><a href="#">Site Map</a></li>
+                <li class="list-border"><a href="#">Hot News</a></li>
+                <li class="list-border"><a href="#">RSS Feeds</a></li>
+                <li class="list-border"><a href="#">Media Info</a></li>
+                <li class="list-border"><a href="#">Environment</a></li>
+                <li class="list-border"><a href="#">Job Opportunities</a></li>
+                <li class="list-border"><a href="#">Contact Us</a></li>
+                <li class="ftr-flag"><img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/global/elements/flags/16x16/usa.png" alt="American flag"></li>
             </ul>
         </div>
         <div class="ftr-2">
