Edited navbar gradient

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <div class="container">
-        <nav class="c-nav">
+        <nav class="c-nav font">
           <ul class="nav-list">
             <li><img class="nav-img" src="Images/apple-logo.png" alt="apple logo"></li>
             <li>Store</li>
@@ -19,10 +19,10 @@
             <li>iPad</li>
             <li>iTunes</li>
             <li>Support</li>
-            <li style="width: 18%;" class="widen"><input class="search-bar" name="search" type="text"></li>
+            <li style="width: 18%; padding-top: 8px;" class="widen"><input class="search-bar" name="search" type="text"></li>
           </ul>
         </nav>
-        <div class="main-txt">
+        <div class="main-txt font">
             <h2>What will your verse be?</h2>
             <p>Everyone has something to share. See how people are using<br>
                 iPad in their unique ways to add to the world's story.
