Edited navbar border

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       <div class="container">
         <nav class="c-nav font">
           <ul class="nav-list">
-            <li><img class="nav-img" src="Images/apple-logo.png" alt="apple logo"></li>
-            <li>Store</li>
-            <li>Mac</li>
-            <li>iPod</li>
-            <li>iPhone</li>
-            <li>iPad</li>
-            <li>iTunes</li>
-            <li>Support</li>
+            <li class="nav-bdr"><img class="nav-img" src="Images/apple-logo.png" alt="apple logo"></li>
+            <li class="nav-bdr">Store</li>
+            <li class="nav-bdr">Mac</li>
+            <li class="nav-bdr">iPod</li>
+            <li class="nav-bdr">iPhone</li>
+            <li class="nav-bdr">iPad</li>
+            <li class="nav-bdr">iTunes</li>
+            <li class="nav-bdr">Support</li>
             <li style="width: 18%; padding-top: 8px;" class="widen"><input class="search-bar" name="search" type="text"></li>
           </ul>
         </nav>
