Added play button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 iPad in their unique ways to add to the world's story.
             </p>
             <p class="sctn-sep">Watch the "Your Verse" film and explore the stories
-                <span><img src="" alt="video play button"></span>
+                <span><img class="play-btn" src="Images/play-btn.png" alt="video play button"></span>
             </p>
         </div>
       </div>
