Added anchor tags to navbar list items

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       <div class="container">
         <nav class="c-nav font">
           <ul class="nav-list">
-            <li class="nav-bdr"><img class="nav-img" src="Images/apple-logo.png" alt="apple logo"></li>
-            <li class="nav-bdr">Store</li>
-            <li class="nav-bdr">Mac</li>
-            <li class="nav-bdr">iPod</li>
-            <li class="nav-bdr">iPhone</li>
-            <li class="nav-bdr">iPad</li>
-            <li class="nav-bdr">iTunes</li>
-            <li class="nav-bdr">Support</li>
-            <li style="width: 18%; padding-top: 8px;" class="widen"><input class="search-bar" name="search" type="text"></li>
+            <li class="nav-bdr"><a href="#"><img class="nav-img" src="Images/apple-logo.png" alt="apple logo"></a></li>
+            <li class="nav-bdr"><a href="#">Store</a></li>
+            <li class="nav-bdr"><a href="#">Mac</a></li>
+            <li class="nav-bdr"><a href="#">iPod</a></li>
+            <li class="nav-bdr"><a href="#">iPhone</a></li>
+            <li class="nav-bdr"><a href="#">iPad</a></li>
+            <li class="nav-bdr"><a href="#">iTunes</a></li>
+            <li class="nav-bdr"><a href="#">Support</a></li>
+            <li style="width: 18%; padding-top: 8px;" class="widen"><a href="#"><input class="search-bar" name="search" type="text"></a></li>
           </ul>
         </nav>
         <div class="main-txt font">
